Removed redundant css and fixed scrollbar

--- a/public/css/dashboardstyles.css
+++ b/public/css/dashboardstyles.css
@@ -12,43 +12,6 @@ body {
     margin-left:0;
     margin-right:0;
 }
-button#editwidget.glyphicon.glyphicon-edit {
-    position:absolute;
-    right:29px;
-    top:0px;
-    font-size:19px;
-    color: #07D1EA;
-    background-color: #000000;
-}
-.settings-menu {
-    position:absolute;
-    right:30px;
-    top:0px;
-    font-size:19px;
-    color: #07D1EA;
-}
-button#removespan {
-    top:2px;
-    padding: 2px 2px;
-}
-button#removespan:hover {
-    background-color:#ccc;
-}
-.id-settings-menu {
-    position:absolute;
-    right:30px;
-    top:0px;
-    font-size:19px;
-    color: #07D1EA;
-}
-button.glyphicon.glyphicon-cog.pull-right.settings:focus {
-    outline:0;
-}
-button.glyphicon.glyphicon-cog.pull-right.settings:active {
-    background-color: #000000;
-    box-shadow: 0 2px #ccc;
-    transform: translateY(1px);
-}
 #qwidgetMenu {
     list-style-type: none;
     padding-left:0px;
@@ -82,65 +45,10 @@ span#user-admin,i#server-admin,i#docs {
     top: 0px;
     right: 8px;
 }
-
 span#qwidgetPlus,i#g-track,i#t-table,i#s-table,i#d-table,i#l-plot,span#save-layout,span#load-layout,span#clear-layout {
     position: relative;
     top: 0px;
     right: 5px;
-}
-.panel-primary>.panel-heading {
-    background-color: #000000;
-    border-color: #000000;
-}
-.panel-primary {
-    border-color: #ffffff;
-}
-.panel-heading {
-    height:30px;
-}
-button#settings.glyphicon.glyphicon-cog {
-    position:absolute;
-    right:4px;
-    top:4px;
-    font-size:19px;
-    color: #07D1EA;
-    background-color: #000000;
-    border-color: #000000;
-    border: 0px;
-    padding: 2px 4px;
-}
-button.settings.glyphicon.glyphicon-cog {
-    position:absolute;
-    right:50px;
-    top:4px;
-    font-size:19px;
-    color: #07D1EA;
-    background-color: #000000;
-    border-color: #000000;
-    border: 0px;
-    padding: 2px 4px;
-}
-button.settings.glyphicon.glyphicon-cog:active {
-    border-color: #000000;
-    border: 0px;
-}
-button.settings.glyphicon.glyphicon-cog:focus {
-    border-color: #000000;
-    border: 0px;
-}
-button#data-menu { 
-    position:absolute;
-    left:0px;
-    top:0px;
-    font-size:19px;
-    color: #07D1EA;
-    background-color: #000000;
-    border-color: #000000;
-    border: 0px;
-    padding: 1px 4px;
-}
-#container {
-    background-color: #F2F3F4;
 }
 .navbar {
     border: 0 none;  
@@ -155,50 +63,23 @@ button#data-menu {
     float: none;
 }
 .navbar-default {
-  background-color: white;
+    background-color: white;
 }
 .navbar-form {
-  margin-top: 0px;
+    margin-top: 0px;
 }
 .navbar-brand>img {
-   height: 100%;
-   width: auto;
-   padding-left:5px;
-   padding-right:5px;
+    height: 100%;
+    width: auto;
+    padding-left:5px;
+    padding-right:5px;
 }
 .navbar-brand {
    padding: 5px 5px;
 }
-
 #add-widget {
    background-color: #07D1EA;
    color: white;
-}
-#input-search {
-   background-color: #242833;
-   border: #242833;
-   border-radius: 0px;
-}
-#group-search {
-   border-radius:0px;     
-   background-color: #464954;
-   border: #464954;
-   color: #FFFFFF;
-}
-#wrapper {
-   padding-left: 250px;
-   -webkit-transition: all 0.5s ease;
-   -moz-transition: all 0.5s ease;
-   -o-transition: all 0.5s ease;
-   transition: all 0.5s ease;
-   overflow: hidden;
-   padding-right: 0;
-   height: 100%;
-   width:100%;
-   /*position: absolute;*/
-}
-#wrapper.toggled {
-  padding-left: 0px;
 }
 .status-icon {
    float: left;
@@ -257,73 +138,10 @@ button#data-menu {
    right:-40px;
    font-size:22px;
 }
-
-/* Sidebar Styles */
-.sidenav {
-   height: 100%;
-   width: 0;
-   position: fixed;
-   z-index: 1;
-   top: 0;
-   left: 0;
-   background-color: #111;
-   overflow-x: hidden;
-   transition: 0.5s;
-   padding-top: 60px;
-}
-.rightsidenav {
-   height: 100%;
-   width: 0;
-   position: fixed;
-   z-index: 1;
-   top: 0;
-   right: 0;
-   background-color: #111;
-   overflow-x: hidden;
-   transition: 0.5s;
-   padding-top: 60px;
-   padding-bottom: 60px;
-}
-.sidenav a {
-   padding: 8px 8px 8px 19px;
-   text-decoration: none;
-   font-size: 16px;
-   color: #818181;
-   display: block;
-   transition: 0.3s
-}
-.rightsidenav a {
-   padding: 8px 15px 8px 19px;
-   text-decoration: none;
-   font-size: 16px;
-   color: #818181;
-   display: block;
-   transition: 0.3s
-}
 a#username.dropdown-toggle {
    font-size:18px;
    color:black;
    display:inline-block;
-}
-.rightsidenav div a {
-   font-size: 20px;
-}
-.sidenav a:hover, .offcanvas a:focus {
-   color: #f1f1f1;
-}
-a#quindar-widgets:hover,a#addQwidget:hover,a#addGround:hover,a#addLine:hover,
-a#addtablewidget:hover,a#datatable:hover,a#searchId:hover,a#saveLayout:hover,
-a#loadLayout:hover,a#clearLayout:hover,a#user:hover,a#server:hover,a#document:hover{
-    background-color: #464954;
-}
-a#left-menu-item1,a#left-menu-item2,a#left-menu-item3,a#left-menu-item4{
-   font-size:16px;
-}
-a#left-menu-item1:hover,a#left-menu-item2:hover,a#left-menu-item3:hover,a#left-menu-item4:hover{
-   background-color: #464954;
-}
-.rightsidenav a:hover, .offcanvas a:focus {
-   color: #f1f1f1;
 }
 #user-name {
    display:none;
@@ -343,19 +161,6 @@ a#left-menu-item1:hover,a#left-menu-item2:hover,a#left-menu-item3:hover,a#left-m
 }
 #mini-logout{
    display:none;
-}
-a#saveLayout, a#loadLayout, a#clearLayout, a#addQwidget{
-   font-size:14px;
-}
-a#addtablewidget,a#addGround,a#addLine,a#datatable{
-   font-size:12px;
-   border-top:1px solid #242833;
-   border-bottom:1px solid #242833; 
-}
-a#searchId{
-   font-size:12px;
-   border-top:1px solid #242833;
-   border-bottom:1px solid #242833; 
 }
 @media only screen and (max-width: 736px) {
   /* For mobile phones: */
@@ -429,10 +234,6 @@ a#searchId{
         margin-top: 10px ;
         margin-bottom:10px;
     }
-
-    .sidenav a {
-        font-size:14px;
-    }
     #configmenu {
         font-size:14px;
         border-bottom: 1px solid #242833;
@@ -489,4 +290,8 @@ a#searchId{
     .navbar-right {
         margin-right: 0px !important;
     }
+}
+
+::-webkit-scrollbar { 
+    display: none; 
 }
